--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -41,8 +41,8 @@
 
     <!--App bar-->
     <dimen name="height">56dp</dimen>
-    <diman name="padding_left">16dp</diman>
-    <diman name="padding_right">16dp</diman>
+    <dimen name="padding_left">16dp</dimen>
+    <dimen name="padding_right">16dp</dimen>
     <dimen name="icon_top_padding">16dp</dimen>
     <dimen name="icon_bottom_padding">16dp</dimen>
     <dimen name="icon_left_padding">16dp</dimen>
