--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context=".ui.activities.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"/>
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="@dimen/size_small_24"
+            android:layout_height="@dimen/size_small_24"
+            android:src="@drawable/ic_call_black_24dp"
+            android:layout_marginTop="@dimen/size_small_24"
+            android:layout_marginLeft="@dimen/size_small_24"/>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="@dimen/size_big_72"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="vertical"
+            android:layout_marginLeft="@dimen/spacing_medium_32"
+            android:layout_marginRight="@dimen/spacing_normal_16">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="50"
+                android:hint="Мобильный"
+                android:gravity="center_vertical"
+                android:textSize="@dimen/notification_subtext_size" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="50"
+                android:hint="+7(905)833-47-50"
+                 />
+        </LinearLayout>
+
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="@dimen/size_small_24"
+            android:layout_height="@dimen/size_small_24"
+            android:src="@drawable/ic_phone_in_talk_black_24dp"
+            android:layout_marginTop="@dimen/size_small_24"
+            android:layout_marginRight="@dimen/size_small_24"/>
+    </LinearLayout>
+</LinearLayout>
+
