--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.activities.MainActivity">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:context=".ui.activities.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,19 +15,25 @@
             android:id="@+id/imageView"
             android:layout_width="@dimen/size_small_24"
             android:layout_height="@dimen/size_small_24"
-            android:src="@drawable/ic_call_black_24dp"
+            android:layout_marginLeft="@dimen/size_small_24"
             android:layout_marginTop="@dimen/size_small_24"
-            android:layout_marginLeft="@dimen/size_small_24"/>
+            android:src="@drawable/ic_call_black_24dp"/>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="@dimen/size_big_72"
+            android:layout_marginLeft="@dimen/spacing_medium_32"
+            android:layout_marginRight="@dimen/spacing_normal_16"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:orientation="vertical"
-            android:layout_marginLeft="@dimen/spacing_medium_32"
-            android:layout_marginRight="@dimen/spacing_normal_16">
-
+            android:orientation="vertical">
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </android.support.design.widget.TextInputLayout>
         </LinearLayout>
 
 
@@ -35,9 +41,9 @@
             android:id="@+id/imageView2"
             android:layout_width="@dimen/size_small_24"
             android:layout_height="@dimen/size_small_24"
-            android:src="@drawable/ic_phone_in_talk_black_24dp"
+            android:layout_marginRight="@dimen/size_small_24"
             android:layout_marginTop="@dimen/size_small_24"
-            android:layout_marginRight="@dimen/size_small_24"/>
+            android:src="@drawable/ic_phone_in_talk_black_24dp"/>
     </LinearLayout>
 </LinearLayout>
 
