--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,177 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              tools:context=".ui.activities.MainActivity">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".ui.activities.MainActivity">
 
-    <LinearLayout
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="@dimen/size_small_24"
-            android:layout_height="@dimen/size_small_24"
-            android:layout_marginLeft="@dimen/size_small_24"
-            android:layout_marginTop="@dimen/size_small_24"
-            android:src="@drawable/ic_call_black_24dp"/>
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="@dimen/size_big_72"
-            android:layout_marginLeft="@dimen/spacing_medium_32"
-            android:layout_marginRight="@dimen/spacing_normal_16"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical">
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-            </android.support.design.widget.TextInputLayout>
+
+            <LinearLayout
+                style="@style/horizontalElement">
+
+                <ImageView
+                    style="@style/icon.left"
+                    android:src="@drawable/ic_call_black_24dp"
+                    />
+
+                <LinearLayout
+                    style="@style/centralElement">
+
+                    <android.support.design.widget.TextInputLayout
+                        style="@style/textInputLayout"
+                        >
+
+                        <EditText
+                            style="@style/editText"
+                            android:hint="@string/mobile_number_string"
+                            android:text="@string/mobile_number"
+                            />
+                    </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+
+
+                <ImageView
+                    style="@style/icon.right"
+                    android:src="@drawable/ic_phone_in_talk_black_24dp"/>
+            </LinearLayout>
+
+            <View
+                style="@style/separator">
+
+            </View>
+
+            <LinearLayout
+                style="@style/horizontalElement">
+
+                <ImageView
+                    style="@style/icon.left"
+                    android:src="@drawable/ic_email_black_24dp"
+                    />
+
+                <LinearLayout
+                    style="@style/centralElement">
+
+                    <android.support.design.widget.TextInputLayout
+                        style="@style/textInputLayout">
+
+                        <EditText
+                            style="@style/editText"
+                            android:hint="@string/email_string"
+                            android:text="@string/email"/>
+                    </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+
+
+                <ImageView
+                    style="@style/icon.right"
+                    android:src="@drawable/ic_send_black_24dp"/>
+            </LinearLayout>
+
+            <View
+                style="@style/separator">
+
+            </View>
+
+            <LinearLayout
+                style="@style/horizontalElement">
+
+                <ImageView
+                    style="@style/icon.left"
+                    android:src="@drawable/ic_vk_circle_black_24dp"
+                    />
+
+                <LinearLayout
+                    style="@style/centralElement">
+
+                    <android.support.design.widget.TextInputLayout
+                        style="@style/textInputLayout">
+
+                        <EditText
+                            style="@style/editText"
+                            android:hint="@string/profile_vk_String"
+                            android:text="@string/profile_vk"/>
+                    </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+
+
+                <ImageView
+                    style="@style/icon.right"
+                    android:src="@drawable/ic_visibility_black_24dp"/>
+            </LinearLayout>
+
+            <View
+                style="@style/separator">
+
+            </View>
+
+            <LinearLayout
+                style="@style/horizontalElement">
+
+                <ImageView
+                    style="@style/icon.left"
+                    android:src="@drawable/ic_github_circle_black_24dp"
+                    />
+
+                <LinearLayout
+                    style="@style/centralElement">
+
+                    <android.support.design.widget.TextInputLayout
+                        style="@style/textInputLayout">
+
+                        <EditText
+                            style="@style/editText"
+                            android:hint="@string/github_repo_string"
+                            android:text="@string/github_repo"/>
+                    </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+
+
+                <ImageView
+                    style="@style/icon.right"
+                    android:src="@drawable/ic_visibility_black_24dp"/>
+            </LinearLayout>
+
+            <View
+                style="@style/separator">
+
+            </View>
+
+            <LinearLayout
+                style="@style/horizontalElement">
+
+                <ImageView
+                    style="@style/icon.left"
+                    android:src="@drawable/ic_account_circle_black_24dp"
+                    />
+
+                <LinearLayout
+                    style="@style/centralElement">
+
+                    <android.support.design.widget.TextInputLayout
+                        style="@style/textInputLayout">
+
+                        <EditText
+                            style="@style/editText"
+                            android:hint="@string/about_string"
+                            android:text="@string/about"
+                            />
+                    </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+
+
+                <ImageView
+                    style="@style/icon.right"
+                    />
+            </LinearLayout>
         </LinearLayout>
-
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="@dimen/size_small_24"
-            android:layout_height="@dimen/size_small_24"
-            android:layout_marginRight="@dimen/size_small_24"
-            android:layout_marginTop="@dimen/size_small_24"
-            android:src="@drawable/ic_phone_in_talk_black_24dp"/>
-    </LinearLayout>
-</LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
+</RelativeLayout>
 
