--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context=".ui.activities.MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              tools:context=".ui.activities.MainActivity">
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -14,6 +14,85 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <!-- Create status bar -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <View style="@style/separatorBig"></View>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:background="@color/color_dim_gray"
+                    android:orientation="horizontal">
+                    <!-- First element reiting -->
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="25"
+                        android:orientation="vertical">
+
+                        <TextView
+                            style="@style/textViewStatus.value"
+                            android:text="5"
+                            />
+
+                        <TextView
+                            style="@style/textViewStatus.nameValue"
+                            android:text="Рейтинг"
+                            />
+                    </LinearLayout>
+                    <View
+                        style="@style/separatorVertical">
+                    </View>
+                    <!-- Second element code -->
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="50"
+                        android:orientation="vertical">
+
+                        <TextView
+                            style="@style/textViewStatus.value"
+                            android:text="5"
+                            />
+
+                        <TextView
+                            style="@style/textViewStatus.nameValue"
+                            android:text="Написано строк кода"
+                            />
+                    </LinearLayout>
+                    <View
+                        style="@style/separatorVertical">
+                    </View>
+                    <!-- Third element proekts -->
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="25"
+                        android:orientation="vertical">
+
+                        <TextView
+                            style="@style/textViewStatus.value"
+                            android:text="5"
+                            />
+
+                        <TextView
+                            style="@style/textViewStatus.nameValue"
+                            android:text="Проектов"
+                            />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <View
+                    style="@style/separatorBig">
+
+                </View>
+            </LinearLayout>
+            <!-- Create phone field -->
             <LinearLayout
                 style="@style/horizontalElement">
 
@@ -37,17 +116,15 @@
                     </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
 
-
                 <ImageView
                     style="@style/icon.right"
                     android:src="@drawable/ic_phone_in_talk_black_24dp"/>
             </LinearLayout>
 
             <View
-                style="@style/separator">
-
+                style="@style/separatorGorizontal">
             </View>
-
+            <!-- Create mail field -->
             <LinearLayout
                 style="@style/horizontalElement">
 
@@ -69,17 +146,16 @@
                     </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
 
-
                 <ImageView
                     style="@style/icon.right"
                     android:src="@drawable/ic_send_black_24dp"/>
             </LinearLayout>
 
             <View
-                style="@style/separator">
+                style="@style/separatorGorizontal">
 
             </View>
-
+            <!-- Create  VK field -->
             <LinearLayout
                 style="@style/horizontalElement">
 
@@ -101,17 +177,16 @@
                     </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
 
-
                 <ImageView
                     style="@style/icon.right"
                     android:src="@drawable/ic_visibility_black_24dp"/>
             </LinearLayout>
 
             <View
-                style="@style/separator">
+                style="@style/separatorGorizontal">
 
             </View>
-
+            <!-- Create Git profile field -->
             <LinearLayout
                 style="@style/horizontalElement">
 
@@ -133,17 +208,16 @@
                     </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
 
-
                 <ImageView
                     style="@style/icon.right"
                     android:src="@drawable/ic_visibility_black_24dp"/>
             </LinearLayout>
 
             <View
-                style="@style/separator">
+                style="@style/separatorGorizontal">
 
             </View>
-
+            <!-- Create user about field-->
             <LinearLayout
                 style="@style/horizontalElement">
 
@@ -153,10 +227,12 @@
                     />
 
                 <LinearLayout
-                    style="@style/centralElement">
+                    style="@style/centralElement"
+                    android:layout_height="wrap_content">
 
                     <android.support.design.widget.TextInputLayout
-                        style="@style/textInputLayout">
+                        style="@style/textInputLayout"
+                        >
 
                         <EditText
                             style="@style/editText"
@@ -173,5 +249,5 @@
             </LinearLayout>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
-</RelativeLayout>
+</LinearLayout>
 
