--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,9 +13,11 @@
         <item name="android:layout_height">@dimen/size_small_24</item>
         <item name="android:layout_marginTop">@dimen/size_small_24</item>
     </style>
+
     <style name="icon.left" parent="icon">
         <item name="android:layout_marginLeft">@dimen/size_small_24</item>
     </style>
+
     <style name="icon.right" parent="icon">
         <item name="android:layout_marginRight">@dimen/size_small_24</item>
     </style>
@@ -25,6 +27,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">horizontal</item>
     </style>
+
     <style name="centralElement">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">@dimen/size_big_72</item>
@@ -34,19 +37,51 @@
         <item name="android:orientation">vertical</item>
         <item name="android:gravity">center_vertical</item>
     </style>
+
     <style name="textInputLayout">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
+
     <style name="editText">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:focusable">false</item>
+
     </style>
     <!-- Separator -->
-    <style name="separator">
+    <style name="separatorGorizontal">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/line_size</item>
         <item name="android:background">@color/color_gray_light</item>
         <item name="android:layout_marginLeft">@dimen/spacing_larger_72</item>
+    </style>
+    <style name="separatorVertical">
+        <item name="android:layout_width">@dimen/line_size</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@color/color_gray_light</item>
+    </style>
+
+    <style name="separatorBig">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/size_small_24</item>
+        <item name="android:background">@color/color_dim_gray</item>
+    </style>
+    <!-- TextViewStatus-->
+    <style name="textViewStatus">
+        <item name="android:color">@color/color_white</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textColor">@color/color_white</item>
+    </style>
+
+    <style name="textViewStatus.value" parent="textViewStatus">
+        <item name="android:textSize">@dimen/abc_text_size_large_material</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="textViewStatus.nameValue" parent="textViewStatus">
+        <item name="android:textStyle">bold</item>
     </style>
 </resources>
