--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -5,10 +5,10 @@
             android:id="@+id/user_profile_menu"
             android:checkable="true"
             android:icon="@drawable/ic_account_circle_black_24dp"
-            android:title="Мой профиль"/>
+            android:title="@string/my_profile"/>
         <item
             android:id="@+id/team_menu"
             android:icon="@drawable/ic_people_black_24dp"
-            android:title="Команда"/>
+            android:title="@string/my_team"/>
     </group>
 </menu>
