--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -72,5 +72,6 @@
     <dimen name="distance_large_24">24dp</dimen>
     <dimen name="line_size">1dp</dimen>
     <dimen name="profile_image_size">256dp</dimen>
+    <dimen name="fab_right_space">8dp</dimen>
 
 </resources>
