--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -158,6 +158,7 @@
                             >
 
                             <EditText
+                                android:id="@+id/phone_et"
                                 style="@style/editText"
                                 android:hint="@string/mobile_number_string"
                                 android:text="@string/mobile_number"
@@ -190,9 +191,11 @@
                             style="@style/textInputLayout">
 
                             <EditText
+                                android:id="@+id/email_et"
                                 style="@style/editText"
                                 android:hint="@string/email_string"
-                                android:text="@string/email"/>
+                                android:text="@string/email"
+                                />
                         </android.support.design.widget.TextInputLayout>
                     </LinearLayout>
 
@@ -220,6 +223,7 @@
                             style="@style/textInputLayout">
 
                             <EditText
+                                android:id="@+id/vk_et"
                                 style="@style/editText"
                                 android:hint="@string/profile_vk_String"
                                 android:text="@string/profile_vk"/>
@@ -250,6 +254,7 @@
                             style="@style/textInputLayout">
 
                             <EditText
+                                android:id="@+id/git_et"
                                 style="@style/editText"
                                 android:hint="@string/github_repo_string"
                                 android:text="@string/github_repo"/>
@@ -282,6 +287,7 @@
                             >
 
                             <EditText
+                                android:id="@+id/bio_et"
                                 style="@style/editText"
                                 android:hint="@string/about_string"
                                 android:text="@string/about"
@@ -297,6 +303,7 @@
         </android.support.v4.widget.NestedScrollView>
         <!-- Create float action button -->
         <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_create_black_24dp"
