--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -8,11 +8,15 @@
                 android:paddingRight="@dimen/spacing_normal_16"
                 android:paddingTop="@dimen/spacing_meadial_24">
 
-    <ImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="@dimen/spacing_normal_16"
-        android:background="@color/color_accent"/>
+
+        <ImageView
+            android:id="@+id/drawer_header_img"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="@dimen/spacing_normal_16"
+            android:src="@drawable/camaro_yellow"
+            android:scaleType="centerCrop"
+            />
 
     <LinearLayout
         android:layout_width="match_parent"
