--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="color_gray_light">#D3D3D3</color>
     <color name="color_dim_gray">#696969</color>
     <color name="color_white">#FFFFFF</color>
+    <color name="grey_background">#454545</color>
+    <color name="color_orange_red">#FF4500</color>
 </resources>
