--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,6 +111,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/user_value_raiting"
                         style="@style/textViewStatus.value"
                         android:text="@string/reiting_value"
                         />
@@ -133,6 +134,7 @@
                     >
 
                     <TextView
+                        android:id="@+id/user_value_code_lines"
                         style="@style/textViewStatus.value"
                         android:text="@string/lines_code_value"
                         />
@@ -154,6 +156,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/user_value_projects"
                         style="@style/textViewStatus.value"
                         android:text="@string/projects_value"
                         />
