--- a/app/src/main/res/layout/user_list_content.xml
+++ b/app/src/main/res/layout/user_list_content.xml
@@ -3,7 +3,7 @@
     android:id="@+id/user_list"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/spacing_large_56"
     android:paddingLeft="@dimen/spacing_small_8"
     android:paddingRight="@dimen/spacing_small_8"/>
